<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editTextNombre"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="21"
    android:useDefaultMargins="true"
    tools:context=".DosisGridActivity"
    android:background="#3EAFFF" >

    <TextView
        android:id="@+id/textViewNombre"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="9"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/nombre" />

    <TextView
        android:id="@+id/textView1"
        android:layout_column="0"
        android:layout_gravity="left|center_vertical"
        android:layout_row="15"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/funcion" />

    <TextView
        android:id="@+id/textViewComentarios"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="16"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/comentarios" />

    <EditText
        android:id="@+id/editTextComentarios"
        android:layout_column="0"
        android:layout_gravity="right|top"
        android:layout_row="17"
        android:ems="10"
        android:textColor="@color/white"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/editTextFuncion"
        android:layout_width="112dp"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="15"
        android:ems="10"
        android:textColor="@color/white"
        android:inputType="textPostalAddress" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btAceptt"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="19"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/btaceptar" />

    <EditText
		android:inputType="text"
        android:id="@+id/editTextName"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="9"
        android:textColor="@color/white"
        android:ems="10" />

</GridLayout>