<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="8"
    android:useDefaultMargins="true"
    tools:context=".DosisGridActivity"
    android:background="#3EAFFF" >

    <TextView
        android:id="@+id/textViewNuevoMedicamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:text="@string/nuevadosis"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/buttonEscogerMedicamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/nuevomedicamento" />

    <TextView
        android:id="@+id/textViewMedicamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:text="Medicamento"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewCantidadGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/cantidad"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <Spinner
        android:id="@+id/spinnerMetodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:layout_row="3" />

    <TextView
        android:id="@+id/textViewFrecuenciaGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="4"
        android:text="@string/frecuencia"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <Spinner
        android:id="@+id/spinnerFrecuenciaGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:layout_row="4" />
    
    <TextView
        android:id="@+id/textViewFechaInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="5"
        android:text="@string/fecha_inicio"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/textViewFechaInicioChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="5"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceMedium" />

   
    
    <TextView
        android:id="@+id/textViewFechaTerminoChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="6"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Space
        android:layout_width="1dp"
        android:layout_height="15dp" />

    

</GridLayout>